Change css style.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <div class="calculator-grid">
       <div class="output">
-        <div class="previous"></div>
-        <div class="current"></div>
+        <div class="previous">123123123</div>
+        <div class="current">12312121212786798798798798</div>
       </div>
-      <div class="span-two">AC</div>
+      <button class="span-two">AC</button>
       <button>DEL</button>
       <button>÷</button>
       <button>1</button>
