--- a/index.html
+++ b/index.html
@@ -9,34 +9,39 @@
   </head>
 
   <body>
-    <div class="calculator-grid">
-      <div class="output">
-        <div class="previous">123123123</div>
-        <div class="current">12312121212786798798798798</div>
+    <div class="container">
+      <div class="calculator">
+        <div class="screen">
+          <div class="screen__previous">2</div>
+          <div class="screen__current">2</div>
+        </div>
+        <div class="buttons">
+          <button class="buttons__operation__clean">AC</button>
+          <button class="buttons__operation__clean">C</button>
+          <button class="buttons__operation">%</button>
+          <button class="buttons__operation">÷</button>
+          <button class="buttons__number">1</button>
+          <button class="buttons__number">2</button>
+          <button class="buttons__number">3</button>
+          <button class="buttons__operation">*</button>
+          <button class="buttons__number">4</button>
+          <button class="buttons__number">5</button>
+          <button class="buttons__number">6</button>
+          <button class="buttons__operation">+</button>
+          <button class="buttons__number">7</button>
+          <button class="buttons__number">8</button>
+          <button class="buttons__number">9</button>
+          <button class="buttons__operation">-</button>
+          <button class="buttons__number">.</button>
+          <button class="buttons__number">0</button>
+          <button class="buttons__operation__equal">=</button>
+        </div>
       </div>
-      <button class="span-two">AC</button>
-      <button>DEL</button>
-      <button>÷</button>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>*</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>+</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>-</button>
-      <button>.</button>
-      <button>0</button>
-      <button class="span-two">=</button>
     </div>
 
-    <!-- <footer>
-      <p>&copy;</p>
-    </footer> -->
-    <script src=""></script>
+    <footer>
+      <p>&copy;DocSchwarz</p>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
