Add new id-class in html, new js code

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
           <div class="screen__current">2</div>
         </div>
         <div class="buttons">
-          <button class="buttons__operation__clean">AC</button>
-          <button class="buttons__operation__clean">C</button>
-          <button class="buttons__operation">%</button>
-          <button class="buttons__operation">÷</button>
-          <button class="buttons__number">1</button>
-          <button class="buttons__number">2</button>
-          <button class="buttons__number">3</button>
-          <button class="buttons__operation">*</button>
-          <button class="buttons__number">4</button>
-          <button class="buttons__number">5</button>
-          <button class="buttons__number">6</button>
-          <button class="buttons__operation">+</button>
-          <button class="buttons__number">7</button>
-          <button class="buttons__number">8</button>
-          <button class="buttons__number">9</button>
-          <button class="buttons__operation">-</button>
-          <button class="buttons__number">.</button>
-          <button class="buttons__number">0</button>
-          <button class="buttons__operation__equal">=</button>
+          <button class="buttons__operation__clean" id="clean">AC</button>
+          <button class="buttons__operation__clean" id="delete">C</button>
+          <button class="buttons__operation" id="percent">%</button>
+          <button class="buttons__operation" id="divide">÷</button>
+          <button class="buttons__number" id="one">1</button>
+          <button class="buttons__number" id="two">2</button>
+          <button class="buttons__number" id="three">3</button>
+          <button class="buttons__operation" id="multiply">*</button>
+          <button class="buttons__number" id="four">4</button>
+          <button class="buttons__number" id="five">5</button>
+          <button class="buttons__number" id="six">6</button>
+          <button class="buttons__operation" id="sum">+</button>
+          <button class="buttons__number" id="seven">7</button>
+          <button class="buttons__number" id="eight">8</button>
+          <button class="buttons__number" id="nine">9</button>
+          <button class="buttons__operation" id="minus">-</button>
+          <button class="buttons__number" id="dot">.</button>
+          <button class="buttons__number" id="zero">0</button>
+          <button class="buttons__operation__equal" id="equal">=</button>
         </div>
       </div>
     </div>
