--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
       <div class="calculator">
         <div class="screen">
-          <div class="screen__previous">2</div>
-          <div class="screen__current">2</div>
+          <div class="screen__previous"></div>
+          <div class="screen__current">100</div>
         </div>
         <div class="buttons">
           <button class="buttons__operation__clean" id="clean">AC</button>
