--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="calculator">
         <div class="screen">
           <div class="screen__previous"></div>
-          <div class="screen__current">100</div>
+          <div class="screen__current"></div>
         </div>
         <div class="buttons">
           <button class="buttons__operation__clean" id="clean">AC</button>
